--- a/formvalidation.html
+++ b/formvalidation.html
@@ -36,7 +36,7 @@
 					<span id="message-error"></span>
 				</div>
 
-				<button>Submit</button>
+				<button onclick=" return validateForm()">Submit</button>
 				<span id="subit-error"></span>
 			</form>
 
